Allow proxy configuration before authentication and suppress reflection warnings
Co-authored-by: thertxnetwork <220472872+thertxnetwork@users.noreply.github.com>